[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/entities/props/items.png" type="Texture" id=1]
[ext_resource path="res://src/entities/props/item_pickup.gd" type="Script" id=2]
[ext_resource path="res://assets/effects/littledot.png" type="Texture" id=3]
[ext_resource path="res://assets/entities/props/item_back.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Small.tres" type="DynamicFont" id=5]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.528736, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0090909 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CircleShape2D" id=2]
radius = 6.7696

[sub_resource type="Animation" id=3]
resource_name = "rise"
tracks/0/type = "value"
tracks/0/path = NodePath("Item:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -24 ) ]
}

[node name="ItemPickup" type="Area2D"]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -57.2355
margin_top = -25.4204
margin_right = 57.7645
margin_bottom = -10.4204
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_fonts/font = ExtResource( 5 )
text = "Double Jump"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="PulseParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, -2 )
amount = 5
lifetime = 0.6
texture = ExtResource( 3 )
emission_shape = 1
emission_sphere_radius = 8.0
direction = Vector2( 0, -1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
scale_amount = 1.2
scale_amount_curve = SubResource( 1 )

[node name="CollectParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, -2 )
emitting = false
amount = 15
lifetime = 1.5
one_shot = true
explosiveness = 1.0
texture = ExtResource( 3 )
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
radial_accel = -200.0
scale_amount = 1.5
scale_amount_random = 0.5

[node name="Item" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 2
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/rise = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_ItemPickup_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
